this should fix the image alignment (hopefully)

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -144,9 +144,9 @@ img {
   position: relative;
   margin: 0 auto;
   max-width: 650px;
-  padding: 5px;
-  margin: 10px 0 32px 0;
-  border: 1px solid #ccc;
+  padding: 0px;
+  margin: 0px 0 0px 0;
+  border: 0px solid #ccc;
 }
 
 
